--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h2><u>List of 10 Forgotten Vegetables</u></h2>
             <div class="v_row">
                 <div class="v_box">
-                    <a href="chayote.html"><img  class='ig' src="images/chayote.png" alt="CHAYOTE (CHOW-CHOW)"></a>
+                    <a href="chayote/chayote.html"><img  class='ig' src="images/chayote.png" alt="CHAYOTE (CHOW-CHOW)"></a>
                     <div class="show"><b>CHAYOTE (CHOW-CHOW)</b>
                         <div class="hide">Chayote, commonly known as Chow-Chow, has gradually slipped into obscurity in South India, primarily due to shifting cultural preferences, changing agricultural practices, and the availability of alternative vegetables. As South Indian society modernizes, there has been a noticeable trend towards adopting more Westernized diets, leading to a decreased demand for traditional vegetables like chayote.  .  .  <a href="chayote.html">know more</a></div>
                     </div>
