All Vegetables added successfully

--- a/chayote/chayote.html
+++ b/chayote/chayote.html
@@ -5,7 +5,7 @@
 <body>
     <div>
         <div id="p1">
-            <img id="veg_img" src="images/chayote.png" alt="CHAYOTE (CHOW-CHOW)">
+            <img id="veg_img" src="chayota.jpg" alt="CHAYOTE (CHOW-CHOW)">
             <h1>CHAYOTE (CHOW-CHOW)</h1>
         </div>
         <div id="p2">
@@ -110,6 +110,7 @@
             <h2>Receipe</h2>
             <h3>Ingredients</h3>
             <ol>
+                <ul>
                 <li>2 medium-sized chayote (Chow-Chow)</li>
                 <li>1 onion, thinly sliced</li>
                 <li>2 cloves garlic, minced</li>
@@ -123,7 +124,7 @@
                 <li>Salt to taste</li>
                 <li>2 tablespoons cooking oil (preferably coconut oil for authentic flavor)</li>
                 <li>Fresh coriander leaves for garnish (optional)</li>
-
+                </ul>
             </ol>
             <div id="cook">
                 <h3>Cooking Procedure</h3>
@@ -159,8 +160,8 @@
                             
                     </div>
                     <div id="r_img">
-                        <img src="images/chayote_receipe.png" alt="receipe_photo">
-                        <h3> STIR FRY</h3>
+                        <img src="stir_fry.jpg" alt="receipe_photo">
+                        <h3>Chayote Fry</h3>
                     </div>
                 </div>
             </div>
@@ -168,6 +169,6 @@
 
     </div>
     <div id="footer">
-        copyright@DP - 2024
+        © copyright@DP - 2024
     </div>
 </body>
