--- a/index.html
+++ b/index.html
@@ -30,87 +30,73 @@
             <h2><u>List of 10 Forgotten Vegetables</u></h2>
             <div class="v_row">
                 <div class="v_box">
-                    <a href="chayote/chayote.html"><img  class='ig' src="images/chayote.png" alt="CHAYOTE (CHOW-CHOW)"></a>
+                    <a href="chayote/chayote.html"><img  class='ig' src="images/chayota.jpg" alt="CHAYOTE (CHOW-CHOW)"></a>
                     <div class="show"><b>CHAYOTE (CHOW-CHOW)</b>
                         <div class="hide">Chayote, commonly known as Chow-Chow, has gradually slipped into obscurity in South India, primarily due to shifting cultural preferences, changing agricultural practices, and the availability of alternative vegetables. As South Indian society modernizes, there has been a noticeable trend towards adopting more Westernized diets, leading to a decreased demand for traditional vegetables like chayote.  .  .  <a href="chayote.html">know more</a></div>
                     </div>
                 </div>
                 <div class="v_box">
-                    <a href="airpotato.html"><img  class='ig' src="images/banner.jpg" alt="AIR POTATO"></a>
+                    <a href="Air Potato/airpotato.html"><img  class='ig' src="images/airpotato.jpg" alt="AIR POTATO"></a>
                     
                     <div class="show"><b>AIR POTATO</b>
-                        <div class="hide">The Air Potato (Dioscorea bulbifera), locally known as "Varahikand," in South India. This versatile yam is native to the tropical and subtropical regions, thriving in the warm and humid climates of states like Kerala, Tamil Nadu, Karnataka, Andhra Pradesh, Telangana, and Puducherry.  .  .  <a href="airpotato.html
-                            ">know more</a></div>
+                        <div class="hide">The Air Potato (Dioscorea bulbifera), locally known as "Varahikand," in South India. This versatile yam is native to the tropical and subtropical regions, thriving in the warm and humid climates of states like Kerala, Tamil Nadu, Karnataka, Andhra Pradesh, Telangana, and Puducherry.  .  .  <a href="Air Potato/airpotato.html">know more</a></div>
                     </div>
                 </div>
                 <div class="v_box">
-                    <img class='ig' src="images/banner.jpg" alt="Air Potato">
+                    <a href="Turkey Berry/Turkey berry.html">
+                    <img class='ig' src="images/turkey_berry.jpg" alt="Air Potato"></a>
                     <div class="show"><b>TURKEY BERRY</b>
-                        <div class="hide">The Air Potato (Dioscorea bulbifera), locally known as "Varahikand," in South India. This versatile yam is native to the tropical and subtropical regions, thriving in the warm and humid climates of states like Kerala, Tamil Nadu, Karnataka, Andhra Pradesh, Telangana, and Puducherry.  .  .  <a href="#">know more</a></div>
+                        <div class="hide">The Air Potato (Dioscorea bulbifera), locally known as "Varahikand," in South India. This versatile yam is native to the tropical and subtropical regions, thriving in the warm and humid climates of states like Kerala, Tamil Nadu, Karnataka, Andhra Pradesh, Telangana, and Puducherry.  .  .  <a href="Turkey Berry/Turkey berry.html">know more</a></div>
                     </div>
                 </div>
             </div>
             <div class="v_row">
                 <div class="v_box">
-                    <img  class='ig' src="images/banner.jpg" alt="Air Potato">
+                    <a href="Clove Beans/clove beans.html">
+                        <img class='ig' src="images/clove_beans.jpg" alt="Air Potato"></a>
                     <div class="show"><b>CLOVE BEANS</b>
-                        <div class="hide">The Air Potato (Dioscorea bulbifera), locally known as "Varahikand," in South India. This versatile yam is native to the tropical and subtropical regions, thriving in the warm and humid climates of states like Kerala, Tamil Nadu, Karnataka, Andhra Pradesh, Telangana, and Puducherry.  .  .  <a href="#">know more</a></div>
+                        <div class="hide">The Air Potato (Dioscorea bulbifera), locally known as "Varahikand," in South India. This versatile yam is native to the tropical and subtropical regions, thriving in the warm and humid climates of states like Kerala, Tamil Nadu, Karnataka, Andhra Pradesh, Telangana, and Puducherry.  .  .  <a href="Clove Beans/clove beans.html">know more</a></div>
                     </div>
                 </div>
                 <div class="v_box">
-                    <img class='ig'  src="images/banner.jpg" alt="Air Potato">
+                    <a href="Moringa Flowers/Moringa Flower.html">
+                    <img class='ig'  src="images/moringa_flowers.jpg" alt="Air Potato"></a>
                     <div class="show"><b>MORINGA FLOWERS</b>
-                        <div class="hide">The Air Potato (Dioscorea bulbifera), locally known as "Varahikand," in South India. This versatile yam is native to the tropical and subtropical regions, thriving in the warm and humid climates of states like Kerala, Tamil Nadu, Karnataka, Andhra Pradesh, Telangana, and Puducherry.  .  .  <a href="#">know more</a></div>
+                        <div class="hide">The Air Potato (Dioscorea bulbifera), locally known as "Varahikand," in South India. This versatile yam is native to the tropical and subtropical regions, thriving in the warm and humid climates of states like Kerala, Tamil Nadu, Karnataka, Andhra Pradesh, Telangana, and Puducherry.  .  .  <a href="Moringa Flowers/Moringa Flower.html">know more</a></div>
                     </div>
                 </div>
                 <div class="v_box">
-                    <img class='ig' src="images/banner.jpg" alt="Air Potato">
+                    <a href="Sunberry/Sunberry.html">
+                    <img class='ig' src="images/sunberry.webp" alt="Air Potato"></a>
                     <div class="show"><b>SUN BERRY</b>
-                        <div class="hide">The Air Potato (Dioscorea bulbifera), locally known as "Varahikand," in South India. This versatile yam is native to the tropical and subtropical regions, thriving in the warm and humid climates of states like Kerala, Tamil Nadu, Karnataka, Andhra Pradesh, Telangana, and Puducherry.  .  .  <a href="#">know more</a></div>
+                        <div class="hide">The Air Potato (Dioscorea bulbifera), locally known as "Varahikand," in South India. This versatile yam is native to the tropical and subtropical regions, thriving in the warm and humid climates of states like Kerala, Tamil Nadu, Karnataka, Andhra Pradesh, Telangana, and Puducherry.  .  .  <a href="Sunberry/Sunberry.html">know more</a></div>
                     </div>
                 </div>
             </div>
             <div class="v_row">
                 <div class="v_box">
-                    <img  class='ig' src="images/banner.jpg" alt="Air Potato">
+                    <a href="Elephant Yam/Elephant yam.html">
+                    <img  class='ig' src="images/elephant_yam.jpg" alt="Air Potato"></a>
                     <div class="show"><b>ELEPHANT YAM</b>
-                        <div class="hide">The Air Potato (Dioscorea bulbifera), locally known as "Varahikand," in South India. This versatile yam is native to the tropical and subtropical regions, thriving in the warm and humid climates of states like Kerala, Tamil Nadu, Karnataka, Andhra Pradesh, Telangana, and Puducherry.  .  .  <a href="#">know more</a></div>
+                        <div class="hide">The Air Potato (Dioscorea bulbifera), locally known as "Varahikand," in South India. This versatile yam is native to the tropical and subtropical regions, thriving in the warm and humid climates of states like Kerala, Tamil Nadu, Karnataka, Andhra Pradesh, Telangana, and Puducherry.  .  .  <a href="Elephant Yam/Elephant yam.html">know more</a></div>
                     </div>
                 </div>
                 <div class="v_box">
-                    <img class='ig'  src="images/banner.jpg" alt="Air Potato">
+                    <a href="Palmyra Sprouts/pulmyra Sprout.html">
+                    <img class='ig'  src="images/palmyra_sprouts.jpg" alt="Air Potato"></a>
                     <div class="show"><b>RED OKRA</b>
-                        <div class="hide">The Air Potato (Dioscorea bulbifera), locally known as "Varahikand," in South India. This versatile yam is native to the tropical and subtropical regions, thriving in the warm and humid climates of states like Kerala, Tamil Nadu, Karnataka, Andhra Pradesh, Telangana, and Puducherry.  .  .  <a href="#">know more</a></div>
+                        <div class="hide">The Air Potato (Dioscorea bulbifera), locally known as "Varahikand," in South India. This versatile yam is native to the tropical and subtropical regions, thriving in the warm and humid climates of states like Kerala, Tamil Nadu, Karnataka, Andhra Pradesh, Telangana, and Puducherry.  .  .  <a href="Palmyra Sprouts/pulmyra Sprout.html">know more</a></div>
                     </div>
                 </div>
                 <div class="v_box">
-                    <img class='ig' src="images/banner.jpg" alt="Air Potato">
+                    <a href="lotus Stem/Lotus Stem.html">
+                    <img class='ig' src="images/lotus_stem.jpg" alt="Air Potato"></a>
                     <div class="show"><b>LOTUS STEM</b>
-                        <div class="hide">The Air Potato (Dioscorea bulbifera), locally known as "Varahikand," in South India. This versatile yam is native to the tropical and subtropical regions, thriving in the warm and humid climates of states like Kerala, Tamil Nadu, Karnataka, Andhra Pradesh, Telangana, and Puducherry.  .  .  <a href="#">know more</a></div>
+                        <div class="hide">The Air Potato (Dioscorea bulbifera), locally known as "Varahikand," in South India. This versatile yam is native to the tropical and subtropical regions, thriving in the warm and humid climates of states like Kerala, Tamil Nadu, Karnataka, Andhra Pradesh, Telangana, and Puducherry.  .  .  <a href="lotus Stem/Lotus Stem.html">know more</a></div>
                     </div>
                 </div>
             </div>
-            <div class="v_row">
-                <div class="v_box">
-                    <img  class='ig' src="banner.jpg" alt="Air Potato">
-                    <div class="show"><b>Air Potato</b>
-                        <div class="hide">The Air Potato (Dioscorea bulbifera), locally known as "Varahikand," in South India. This versatile yam is native to the tropical and subtropical regions, thriving in the warm and humid climates of states like Kerala, Tamil Nadu, Karnataka, Andhra Pradesh, Telangana, and Puducherry.  .  .  <a href="#">know more</a></div>
-                    </div>
-                </div>
-                <div class="v_box">
-                    <img class='ig'  src="images/banner.jpg" alt="Air Potato">
-                    <div class="show"><b>Air Potato</b>
-                        <div class="hide">The Air Potato (Dioscorea bulbifera), locally known as "Varahikand," in South India. This versatile yam is native to the tropical and subtropical regions, thriving in the warm and humid climates of states like Kerala, Tamil Nadu, Karnataka, Andhra Pradesh, Telangana, and Puducherry.  .  .  <a href="#">know more</a></div>
-                    </div>
-                </div>
-                <div class="v_box">
-                    <img class='ig' src="images/banner.jpg" alt="Air Potato">
-                    <div class="show"><b>Air Potato</b>
-                        <div class="hide">The Air Potato (Dioscorea bulbifera), locally known as "Varahikand," in South India. This versatile yam is native to the tropical and subtropical regions, thriving in the warm and humid climates of states like Kerala, Tamil Nadu, Karnataka, Andhra Pradesh, Telangana, and Puducherry.  .  .  <a href="#">know more</a></div>
-                    </div>
-                </div>
-            </div>
-        </div>
+            
         <div id="p4">
             @copyright,2024
         </div>
