alt updated in index

--- a/index.html
+++ b/index.html
@@ -44,55 +44,55 @@
                 </div>
                 <div class="v_box">
                     <a href="Turkey Berry/Turkey berry.html">
-                    <img class='ig' src="images/turkey_berry.jpg" alt="Air Potato"></a>
+                    <img class='ig' src="images/turkey_berry.jpg" alt="TURKEY BERRY"></a>
                     <div class="show"><b>TURKEY BERRY</b>
-                        <div class="hide">The Air Potato (Dioscorea bulbifera), locally known as "Varahikand," in South India. This versatile yam is native to the tropical and subtropical regions, thriving in the warm and humid climates of states like Kerala, Tamil Nadu, Karnataka, Andhra Pradesh, Telangana, and Puducherry.  .  .  <a href="Turkey Berry/Turkey berry.html">know more</a></div>
+                        <div class="hide">Turkey berry, known locally as "Sundakkai" in South India, has gradually become a forgotten vegetable due to several factors. Firstly, changes in dietary preferences and lifestyles have led to a decline in the consumption of traditional and indigenous vegetables like turkey berry.  .  .  <a href="Turkey Berry/Turkey berry.html">know more</a></div>
                     </div>
                 </div>
             </div>
             <div class="v_row">
                 <div class="v_box">
                     <a href="Clove Beans/clove beans.html">
-                        <img class='ig' src="images/clove_beans.jpg" alt="Air Potato"></a>
+                        <img class='ig' src="images/clove_beans.jpg" alt="CLOVE BEANS"></a>
                     <div class="show"><b>CLOVE BEANS</b>
-                        <div class="hide">The Air Potato (Dioscorea bulbifera), locally known as "Varahikand," in South India. This versatile yam is native to the tropical and subtropical regions, thriving in the warm and humid climates of states like Kerala, Tamil Nadu, Karnataka, Andhra Pradesh, Telangana, and Puducherry.  .  .  <a href="Clove Beans/clove beans.html">know more</a></div>
+                        <div class="hide">Clove beans, also known as "kunthirikkalam" in South India, have gradually faded from culinary popularity in the region for several reasons. One primary factor is the shift towards more commercially viable and easily accessible vegetables. Clove beans require specific growing conditions and are not as widely available as other vegetables commonly found in South Indian cuisine..  .  .  <a href="Clove Beans/clove beans.html">know more</a></div>
                     </div>
                 </div>
                 <div class="v_box">
                     <a href="Moringa Flowers/Moringa Flower.html">
-                    <img class='ig'  src="images/moringa_flowers.jpg" alt="Air Potato"></a>
+                    <img class='ig'  src="images/moringa_flowers.jpg" alt="MORINGA FLOWER"></a>
                     <div class="show"><b>MORINGA FLOWERS</b>
-                        <div class="hide">The Air Potato (Dioscorea bulbifera), locally known as "Varahikand," in South India. This versatile yam is native to the tropical and subtropical regions, thriving in the warm and humid climates of states like Kerala, Tamil Nadu, Karnataka, Andhra Pradesh, Telangana, and Puducherry.  .  .  <a href="Moringa Flowers/Moringa Flower.html">know more</a></div>
+                        <div class="hide">Moringa flower, despite its remarkable nutritional value and culinary potential, has somewhat fallen into obscurity in South India. Several factors contribute to this. One primary reason is the gradual shift towards modern agricultural practices and the emphasis on cash crops, which has led to a decline in traditional farming of diverse crops like moringa. .  .  .  <a href="Moringa Flowers/Moringa Flower.html">know more</a></div>
                     </div>
                 </div>
                 <div class="v_box">
                     <a href="Sunberry/Sunberry.html">
-                    <img class='ig' src="images/sunberry.webp" alt="Air Potato"></a>
+                    <img class='ig' src="images/sunberry.webp" alt="Sun Berry"></a>
                     <div class="show"><b>SUN BERRY</b>
-                        <div class="hide">The Air Potato (Dioscorea bulbifera), locally known as "Varahikand," in South India. This versatile yam is native to the tropical and subtropical regions, thriving in the warm and humid climates of states like Kerala, Tamil Nadu, Karnataka, Andhra Pradesh, Telangana, and Puducherry.  .  .  <a href="Sunberry/Sunberry.html">know more</a></div>
+                        <div class="hide">Sun berry, also known as Solanum nigrum or black nightshade, has gradually faded into obscurity in South India primarily due to several factors. Firstly, there is a misconception surrounding its toxicity, as certain varieties of black nightshade contain poisonous compounds, leading to apprehension among consumers.  .  .  <a href="Sunberry/Sunberry.html">know more</a></div>
                     </div>
                 </div>
             </div>
             <div class="v_row">
                 <div class="v_box">
                     <a href="Elephant Yam/Elephant yam.html">
-                    <img  class='ig' src="images/elephant_yam.jpg" alt="Air Potato"></a>
+                    <img  class='ig' src="images/elephant_yam.jpg" alt="Elephant Yam"></a>
                     <div class="show"><b>ELEPHANT YAM</b>
-                        <div class="hide">The Air Potato (Dioscorea bulbifera), locally known as "Varahikand," in South India. This versatile yam is native to the tropical and subtropical regions, thriving in the warm and humid climates of states like Kerala, Tamil Nadu, Karnataka, Andhra Pradesh, Telangana, and Puducherry.  .  .  <a href="Elephant Yam/Elephant yam.html">know more</a></div>
+                        <div class="hide">Elephant yam, a staple in traditional South Indian cuisine, has gradually become forgotten due to several factors. One reason is the changing dietary preferences influenced by urbanization and globalization. As South Indian society becomes more urbanized, there has been a shift towards convenience foods.  .  .  <a href="Elephant Yam/Elephant yam.html">know more</a></div>
                     </div>
                 </div>
                 <div class="v_box">
                     <a href="Palmyra Sprouts/pulmyra Sprout.html">
-                    <img class='ig'  src="images/palmyra_sprouts.jpg" alt="Air Potato"></a>
+                    <img class='ig'  src="images/palmyra_sprouts.jpg" alt="Red Okra"></a>
                     <div class="show"><b>RED OKRA</b>
-                        <div class="hide">The Air Potato (Dioscorea bulbifera), locally known as "Varahikand," in South India. This versatile yam is native to the tropical and subtropical regions, thriving in the warm and humid climates of states like Kerala, Tamil Nadu, Karnataka, Andhra Pradesh, Telangana, and Puducherry.  .  .  <a href="Palmyra Sprouts/pulmyra Sprout.html">know more</a></div>
+                        <div class="hide">The Palmyra sprout, traditionally known as 'Panang Kizhangu' in South India, has gradually faded into obscurity for several reasons. One significant factor contributing to its decline is the changing landscape of agricultural practices and dietary preferences..  .  .  <a href="Palmyra Sprouts/pulmyra Sprout.html">know more</a></div>
                     </div>
                 </div>
                 <div class="v_box">
                     <a href="lotus Stem/Lotus Stem.html">
-                    <img class='ig' src="images/lotus_stem.jpg" alt="Air Potato"></a>
+                    <img class='ig' src="images/lotus_stem.jpg" alt="Lotus Stem"></a>
                     <div class="show"><b>LOTUS STEM</b>
-                        <div class="hide">The Air Potato (Dioscorea bulbifera), locally known as "Varahikand," in South India. This versatile yam is native to the tropical and subtropical regions, thriving in the warm and humid climates of states like Kerala, Tamil Nadu, Karnataka, Andhra Pradesh, Telangana, and Puducherry.  .  .  <a href="lotus Stem/Lotus Stem.html">know more</a></div>
+                        <div class="hide">The lotus stem, often referred to as "Kamal Kakdi" or "Thamara Thandu" in South India, has gradually faded into obscurity for several reasons. Firstly, changes in agricultural practices and land use have led to the decline of lotus cultivation in the region. Traditional wetland farming methods.  .  .  <a href="lotus Stem/Lotus Stem.html">know more</a></div>
                     </div>
                 </div>
             </div>
