--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Front</title>
+        <meta name="google-site-verification" content="zb9w5DK0q1tBXpfVyajWb3axMwOqXxfs6MgqJvVOArU" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0" />
         <link rel="stylesheet" href="front.css">
         
